update api get trip
